<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/ver_mensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_dialogo"
            />

        <Button
            android:id="@+id/capturar_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_dialogo2"
            />

        <Button
            android:id="@+id/ver_mensaje_personalizado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_dialogo3"
            />
        <Button
            android:id="@+id/ver_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_dialogo4"
            />
        <Button
            android:id="@+id/ver_toastp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_dialogo5"
            />

    </LinearLayout>



</RelativeLayout>